<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.techgeek.kanazubi.Menu">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_marginTop="10dp"
            android:layout_width="240dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@+id/imgView_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_dp" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:layout_marginTop="15dp">
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <RelativeLayout
                    android:id="@+id/rellay11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="180dp"
                        android:layout_height="50dp"
                        android:maxHeight="30dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/nameMenu"
                        android:textSize="19sp"
                        android:maxLength="30"
                        android:maxLines="2"
                        android:textColor="@color/color_almostwhite"/>

                    <Button
                        android:id="@+id/logoutBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/signin_btn"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/logoutBtn"
                        android:textColor="@color/color_white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/linlay1">

                <RelativeLayout
                    android:id="@+id/rellay22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tv_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tv_menu"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/color_white"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:text="@string/statusText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="65dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tv_menu"
                        android:textSize="21sp"
                        android:textColor="@color/color_almostwhite"/>

                    <Spinner
                        android:id="@+id/spinnerStatus"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:layout_marginStart="50dp"
                        android:layout_alignBaseline="@id/tv_status"
                        android:layout_toEndOf="@id/tv_status"
                        android:drawSelectorOnTop="true"
                        android:layout_below="@id/tv_status">

                    </Spinner>

                    <TextView
                        android:id="@+id/tv_team"
                        android:text="@string/teamText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/spinnerStatus"
                        android:textSize="21sp"
                        android:textColor="@color/color_almostwhite"/>

                    <Spinner
                        android:id="@+id/spinnerTeam"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:layout_marginStart="50dp"
                        android:layout_alignBaseline="@id/tv_team"
                        android:layout_toEndOf="@id/tv_status"
                        android:drawSelectorOnTop="true"
                        android:layout_below="@id/tv_team">

                    </Spinner>

                    <Button
                        android:id="@+id/searchBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="55dp"
                        android:layout_below="@id/spinnerTeam"
                        android:background="@drawable/signin_btn"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/searchBtn"
                        android:textColor="@color/color_white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

    </RelativeLayout>

</RelativeLayout>